<resources>
    <!-- App settings for start page -->
    <string name="app_name">Dog shelter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="default_username">Username</string>
    <string name="default_password">Password</string>
    <string name="loading">Loading ...</string>
    <string name="facebook_app_id">354018245051548</string>
    <!-- Navigation drawer items -->
    <string name="shelterList">Shelters</string>
    <string name="dogList">Dogs</string>
    <string name="newsList">News</string>
    <string name="map">Google map</string>

    <string name="shelterList_fragment">Shelter List</string>
    <string name="dogList_fragment">Dog List</string>
    <string name="newsList_fragment">News List</string>
    <string name="map_fragment">Google map</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Registration strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerQuestion">Create account</string>
    <string name="account_firstname">First name: </string>
    <string name="account_lastName">Last name: </string>
    <string name="account_username">Username: </string>
    <string name="account_password">Password: </string>
    <string name="account_confirmPassword">Confirm password: </string>
    <string name="account_email">Email: </string>
    <string name="account_number">Phone number: </string>
    <string name="account_createAccount">Create account</string>

    <!-- Shelter strings -->
    <string name="add_shelter_name">Name:</string>
    <string name="add_shelter_address">Addr:</string>
    <string name="add_shelter_number">Number:</string>
    <string name="add_shelter_location">Location:</string>
    <string name="add_shelter_city">City:</string>
    <string name="add_shelter_bank_account">Bank account:</string>
    <string name="btnCreateShelter">Create shelter</string>
    <string name="btnUpdateShelter">Update shelter</string>

    <!-- Dogs strings -->
    <string name="lblName">Name:</string>
    <string name="lblBread">Bread:</string>
    <string name="lblGender">Gen.:</string>
    <string name="lblAge">Age:</string>
    <string name="btnCreateDog">Create dog</string>

    <!-- News strings -->
    <string name="add_news_title">Title:</string>
    <string name="add_news_description">Description:</string>

    <string name="lblShalter">Shelter:</string>
    <string name="lblDescription">Descr:</string>
    <string name="lblDate">Date:</string>
    <string name="lblAddNews">Add news:</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>

    <string name="action_settings">Update user details</string>
    <string name="mapShelter">Shelter map</string>
    <string name="title_activity_map">Map</string>
    <string name="btnAddNews">Add news</string>
    <string name="btnCreateAnnouncement">Publish</string>
    <string name="btnUpdateAnnouncement">Update</string>
    <string name="btnDeleteAnnouncement">Delete</string>
    <string name="btnAddDog">Add dog</string>
    <string name="logOut">Log out</string>
    <string name="btnUpdateDog">Update dog</string>
    <string name="lblWeight">Weight:</string>
    <string name="lblHeight">Height:</string>
    <string name="lblAnamnesis">Anamnesis:</string>
    <string name="lblSterilized">Sterilized</string>
    <string name="lblMarked">Marked</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="account_old_password">Old password:</string>
    <string name="lblChangePassword">Change password</string>
    <string name="btnUpdateUser">Update user</string>
    <string name="search">Search by title</string>
    <string name="add_shelter_langitude">Longitude:</string>
    <string name="add_shelter_latitude">Latitude:</string>
    <string name="favorite_dogs">Favorite dogs</string>
    <string name="favorite">Favorite</string>
    <string name="add_favorite">Set as favorite</string>
    <string name="lblRateScoreNews">Rating score:</string>
    <string name="lblRateNews">Give your rate:</string>

</resources>
