<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mvp.addDog.AddDogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" >

        <!-- Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/add_dog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Bread -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblBread"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_dog_bread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGender"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <Spinner android:id="@+id/add_dog_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border"
            />

        <!-- Age -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAge"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_dog_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Weight -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblWeight"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_dog_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Height -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblHeight"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_dog_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Sterilized -->
        <CheckBox
            android:id="@+id/is_sterilized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/lblSterilized"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Marked -->
        <CheckBox
            android:id="@+id/is_marked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/lblMarked"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <!-- Anamnesis -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAnamnesis"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/add_dog_anamnesis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/border" />

        <Button
            android:id="@+id/btnCreateDog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btnCreateDog"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

</ScrollView>

